--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container">
-        <p>&copy; 2025 TribalWars Maps</p>
+        <p>&copy; 2025 SuperdogMaps. Tribal Wars&trade; is a trademark of InnoGames GmbH.</p>
     </div>
 </footer>
