fix footer with correct trademark

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
         <h1><a href="index.html">TribalWars Maps <span class="attribution">by Superdog</span></a></h1>
-        <p>Daily map updates for TribalWars browser game</p>
+        <p>Daily map updates for the TribalWars browser game</p>
     </div>
 </header>
